--- a/environment.yml
+++ b/environment.yml
@@ -27,4 +27,5 @@ dependencies:
     - PyMCubes
     - pysdf
     - dearpygui
+    - open3d
     - git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch
